--- a/togotop/css/main.css
+++ b/togotop/css/main.css
@@ -3,3 +3,20 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+h1,h2,h3,h4,h5,h6, p {
+  margin: 0;
+}
+
+body {
+  font-family: 'Inter', sans-serif;
+  font-size: 20px;
+  line-height: 1.50;
+  font-weight: 400;
+  background-color: #141414;
+  color: #fff;
+}
+
+a {
+  text-decoration: none;
+}
